# E-LinkPaper-DeviceStatus

./: .gitignore  CMakeLists.txt  DS18B20.py  E-LinkStatus.service  E-LinkStatus.sln  E-LinkStatus.spec  E-LinkStatusConfig.xml  InfluxDBDef.py  Jenkinsfile  Page.py  README  README.md  Requirements.txt  StatusProject.service  StatusProject.spec  configure  configure.ac  eLinkDisplayStatus.service  todo.txt
4.2inch_e-paper/: epdif.py
CMake/: CMakeLists.txt  arm-linux-gnueabihf.cmake  arm-linux-llvm.cmake  llvm.cmake  llvm2.cmake
CMake/Package/: eLinkDisplayStatus.service  eLinkDisplayStatus.service.cmake  postinst  postrm  prerm
CMake/toolchain/: arm-linux-gnueabihf.cmake
Cpp/: E-LinkStatus.vcxproj  E-LinkStatus.vcxproj.filters  E-LinkStatusConfig.xml  Makefile.in  config.h.in  configure  configure.ac
Cpp/msvc/: E-LinkStatus.vcxproj  E-LinkStatus.vcxproj.filters
Cpp/src/: DeviceDef.hpp  Makefile.am  Makefile.in  StatusManager.cpp  StatusManager.hpp  StatusPing.cpp  StatusPing.hpp  Timer.hpp  main.cpp
Cpp/src/DS18B20/: DS18B20.cpp  DS18B20.h
Cpp/src/e-link_4in2/: epd.h  epd4in2.cpp  epd4in2.h  epdBcm2835.cpp  epdWiringPi.cpp
Cpp/src/fonts/: KS0108.cpp  KS0108.hpp
Cpp/src/fonts/KS0108/: Georgia15x15.cpp  Liberation_Mono11Bold.cpp  Liberation_Mono9.cpp  Liberation_Mono9Bold.cpp
Cpp/src/painter/: FontDef.hpp  Painter.cpp  Painter.hpp  PainterFont.cpp  PainterFont.hpp  epdpaint.cpp  epdpaint.h
Cpp/src/ping/: ping.cpp  ping.h  pingv3.cpp  pingv3.hpp
Project/: E-LinkStatus.py  PageMikrotik.py  PagePrinter.py
Project/4.2inch_e-paper/: epd4in2.py
Python/: E-LinkStatus.spec  PageMariano.py  Requirements.txt
Python/4.2inch_e-paper/: epdif.py
Python/Project/: PageStatus.py
Tools/GLCD Font Creator/: GLCDFontCreator.chm
autoconf/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
case/: Assembly.iam  Bottom.ipt  Cover.ipt  ELinkDisplay.ipj  Holder.ipt  NanoPI.ipt  Top.ipt
cmake/deb/: E-LinkStatusConfig.xml  eLinkDisplayStatus.service.cmake
cmake/toolchain/: arm-linux-gnueabihf.cmake
lib/: influxdb.cpp
lib/wiringNPi/: wiringPiSPI.c
msvc/: .gitignore  E-LinkStatus.sln  E-LinkStatus.vcxproj  E-LinkStatus.vcxproj.filters
msvc/E-LinkStatus/: E-LinkStatus.vcxproj  E-LinkStatus.vcxproj.filters
msvc/wiringNPi/: wiringNPi.vcxproj  wiringNPi.vcxproj.filters
msvc/wiringPi/: wiringPi.vcxproj  wiringPi.vcxproj.filters
schema/: NanoPi_NEO_Air-V1.1-1708.dxf
src/: DataProvider.cpp  DataProvider.hpp  InfluxWriter.cpp  InfluxWriter.hpp  Makefile.am  StatusLed.cpp  StatusLed.hpp  StatusManager.cpp  StatusManager.hpp  StatusPing.cpp  StatusPing.hpp  TempProvider.cpp  TempProvider.hpp  Timer.hpp  bluetooth.cpp  bluetooth.hpp  gpioPooling.cpp  gpioPooling.hpp  main.cpp
src/DS18B20/: DS18B20.cpp  DS18B20.h
src/SI7021/: SI7021.cpp  SI7021.hpp
src/Utils/: Task.cpp  Task.hpp
src/e-link/: epd.cpp  epd.hpp  epd4in2.cpp  epd4in2.h  epd7in5b.cpp  epd7in5b.hpp  epdBcm2835.cpp  epdBcm2835.hpp  epdInterface.hpp  epdWiringPi.cpp  epdWiringPi.hpp
src/fonts/: KS0108.cpp  KS0108.hpp
src/fonts/KS0108/: Arial28.cpp  Digital-7-36Bold.cpp  Ebrima28.cpp  Liberation_Mono10.cpp  Liberation_Mono10Bold.cpp  Liberation_Mono12.cpp  Liberation_Mono8.cpp
src/image/: Image.cpp  Image.hpp
src/image/Data/: avatar.cpp  icons8-humidity-32.cpp  icons8-temperature-30.cpp
src/lib/: influxdb.hpp
src/lib/bcm2835/: bcm2835.c
src/lib/influxDB/: influxdb.cpp
src/lib/wiringNPi/: boardtype_friendlyelec.c  wiringPi.c
src/painter/: FontDef.hpp  Painter.cpp  Painter.hpp  PainterDef.hpp  PainterFont.hpp
